ingress-rules.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/secure-backends: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: 2018-10-04T14:26:59Z
    generation: 3
    name: authenticate
    namespace: auth
    resourceVersion: "29475531"
    selfLink: /apis/extensions/v1beta1/namespaces/auth/ingresses/authenticate
    uid: 8e0d6e53-c7e1-11e8-ae3e-0050569d1a52
  spec:
    rules:
    - host: login-k8s.example.org
      http:
        paths:
        - backend:
            serviceName: loginapp
            servicePort: 5555
    - host: dex-k8s.example.org
      http:
        paths:
        - backend:
            serviceName: dex
            servicePort: 5556
    tls:
    - secretName: dex.tls
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
