keycloak-proxy-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "14"
  creationTimestamp: null
  generation: 1
  labels:
    name: keycloak-proxy
  name: keycloak-proxy
  selfLink: /apis/extensions/v1beta1/namespaces/auth/deployments/keycloak-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keycloak-proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        repository: https://github.com/gambol99/keycloak-proxy
      creationTimestamp: null
      labels:
        name: keycloak-proxy
    spec:
      containers:
      - args:
        - --listen=:80
        - --upstream-url=http://kubernetes-dashboard.auth
        - --discovery-url=https://dex-k8s.example.org/dex
        - --client-id=loginapp
        - --skip-upstream-tls-verify
        - --redirection-url=https://dashboard-k8s.example.org
        - --client-secret=4TORGiNV9M54BTk1v7dNuFSaI6hUjfjr
        - --scopes=groups
        - --enable-authorization-header
        - --resources=uri=/*
        - --skip-openid-provider-tls-verify
        - --secure-cookie=false
        image: https://github.com/gambol99/keycloak-proxy:2.2.2
        imagePullPolicy: Always
        name: proxy
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
