kubernetes-dashboard-secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    addonmanager.kubernetes.io/mode: EnsureExists
    k8s-app: kubernetes-dashboard-minimal
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: kubernetes-dashboard
  name: kubernetes-dashboard-minimal
  selfLink: /api/v1/namespaces/kube-system/services/kubernetes-dashboard-secure
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    k8s-app: kubernetes-dashboard-minimal
  sessionAffinity: None
status:
  loadBalancer: {}
