loginapp-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: null
  generation: 1
  labels:
    app: loginapp
  name: loginapp
  selfLink: /apis/extensions/v1beta1/namespaces/auth/deployments/loginapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loginapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: loginapp
    spec:
      containers:
      - image: objectiflibre/login-app:latest
        imagePullPolicy: IfNotPresent
        name: loginapp
        ports:
        - containerPort: 5555
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/ssl/
          name: ca
        - mountPath: /app/
          name: config
        - mountPath: /etc/loginapp/tls
          name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: ca.pem
            path: ca.pem
          name: ca
        name: ca
      - configMap:
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
          name: loginapp
        name: config
      - name: tls
        secret:
          defaultMode: 420
          secretName: login.tls
status: {}
