loginapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: loginapp
  selfLink: /api/v1/namespaces/auth/services/loginapp
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: loginapp
    port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: loginapp
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
